--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -18,12 +18,18 @@ nav{
 header{
 	background-color: #F5F6CE;
 }
-.services{
-	
+
+
+.services{	
 	background-color: #F3E2A9;
 	border-top: 2px solid black;
-	padding: 30px;
-	margin-bottom: 10px;
+	margin-bottom: 0;
+	padding-bottom: 30px;
+	a{
+		margin: 40px;
+		color: black;
+		background-color: #F7BE81;
+	}
 	img{
 		position: relative;
 		bottom: 60px;
@@ -33,8 +39,27 @@ header{
 		text-align: justify;
 		padding: 10px;
 	}
-	a{
-		color: black;
-		background-color: #F7BE81;
+
+}
+.two{
+	background-color: #F2F2F2;
+	.description{
+		padding: 50px 10px;
+		h4{
+			color: #B40404;
+			margin: $margin;
+		}
+		img{
+			border-radius: 10px;
+		}
+		ul{
+
+			li{
+				margin: $margin;
+				img{
+					width: 20px;
+				}
+			}
+		}
 	}
 }
