--- a/css/main.css
+++ b/css/main.css
@@ -45,4 +45,27 @@ header {
       .two .description ul li img {
         width: 20px; }
 
+.three {
+  background-color: #2E2E2E;
+  padding: 20px;
+  color: #F3E2A9; }
+  .three .about {
+    text-align: right;
+    padding: 30px; }
+    .three .about img {
+      float: left;
+      border-radius: 10px; }
+    .three .about li {
+      margin: 20px 0;
+      margin-left: 50%; }
+  .three .program {
+    text-align: left;
+    padding: 30px; }
+    .three .program img {
+      float: right;
+      border-radius: 10px; }
+    .three .program li {
+      margin: 20px 0;
+      margin-right: 50%; }
+
 /*# sourceMappingURL=main.css.map */
