footer casi terminado

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -63,7 +63,7 @@ nav{
 	}
 }
 .three{
-	background-color: #442D2E;
+	background-color:#442D2E;
 	padding: 20px;
 	color: #F3E2A9;
 	border: 2px solid #F3E2A9;
@@ -95,4 +95,8 @@ nav{
 			margin-right: 50%;
 		}
 	}
+}
+
+footer{
+	background-color: #241818;
 }
